# softcheck

./: .gitignore  .ocamlinit  .travis.yml  Makefile  README.md  _tags  main.byte  softcheck.opam
src/exe/: caoMain.ml  jbuild  tipMain.ml
src/lib/: jbuild  utils.ml
src/lib/analysis/: veryBusyExpressions.ml
src/lib/cao/: cao.ml
src/lib/cao/analysis/: aexpCao.ml  reachingDefinitionsCao.ml  taint_cao.ml
src/lib/cao/ast/: caoAst.ml  caoPrinter.ml
src/lib/cao/exceptions/: caoExceptions.ml
src/lib/cao/parser/: caoParser.mly
src/lib/framework/: analysis.ml  chaotic.ml  flowGraph.ml
src/lib/tip/: tip.ml
src/lib/tip/analysis/: signAnalysisTip.ml  taintTip.ml
src/lib/tip/parser/: tipParser.mly
src/test/: jbuild
